observability/ingress-kibana.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kibana-ingress
  namespace: logging
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
spec:
  ingressClassName: nginx
  rules:
  - host: kibana.dsvault.in
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: eck-kibana-kb-http
            port:
              number: 5601
